--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9,20 +9,19 @@
   margin: 0 auto;
 }
 
-.blue-band {
+header .blue-band {
   padding: 0.3rem;
   background-color: #0282f9;
   color: white;
 }
-.blue-band .container {
+header .blue-band .container {
   display: flex;
   justify-content: flex-end;
 }
-.blue-band h4 {
+header .blue-band h4 {
   margin-left: 6rem;
   font-size: 12px;
 }
-
 header nav .container {
   padding: 1rem 0;
   display: flex;
@@ -137,6 +136,107 @@ header nav .nav-list li {
   width: 40px;
 }
 .nav-main li a .container-img img {
+  height: 100%;
+  width: 100%;
+}
+
+#comic-container .container {
+  width: 55%;
+}
+#comic-container .blue-band {
+  height: 80px;
+  position: relative;
+  background-color: #0282f9;
+}
+#comic-container .blue-band img {
+  position: absolute;
+  bottom: 20px;
+}
+#comic-container .main-container {
+  padding: 5rem 0;
+}
+#comic-container .main-container .flex-container {
+  display: flex;
+  justify-content: space-between;
+}
+#comic-container .main-container .flex-container .description-container {
+  width: 70%;
+}
+#comic-container .main-container .flex-container .description-container h1 {
+  margin-bottom: 2rem;
+  text-transform: uppercase;
+  font-size: 30px;
+  color: #003f5e;
+}
+#comic-container .main-container .flex-container .description-container .price-container {
+  padding: 1rem 1.5rem;
+  margin-bottom: 2rem;
+  display: flex;
+  background-color: #55ba59;
+  color: #bafd93;
+}
+#comic-container .main-container .flex-container .description-container .price-container .left {
+  display: flex;
+  width: 70%;
+  justify-content: space-between;
+}
+#comic-container .main-container .flex-container .description-container .price-container .left .white {
+  color: white;
+}
+#comic-container .main-container .flex-container .description-container .price-container .right {
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  color: white;
+}
+#comic-container .main-container .flex-container .advertise {
+  width: 27%;
+  text-align: end;
+}
+#comic-container .main-container .flex-container .advertise img {
+  width: 100%;
+}
+#comic-container .info-container {
+  background-color: lightgray;
+}
+#comic-container .info-container > .container {
+  padding: 2rem;
+  display: flex;
+  justify-content: space-between;
+}
+#comic-container .info-container > .container .talents {
+  width: 48%;
+}
+#comic-container .info-container > .container .specs {
+  width: 48%;
+}
+#comic-container .info-container .nav-main {
+  text-align: center;
+  background-color: #0282f9;
+}
+#comic-container .info-container .nav-main ul {
+  flex-grow: 1;
+  display: flex;
+  justify-content: space-between;
+}
+#comic-container .info-container .nav-main li {
+  margin: 0 1.5rem;
+  display: inline-block;
+}
+#comic-container .info-container .nav-main li a {
+  padding: 50px 0;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  color: white;
+  text-decoration: none;
+}
+#comic-container .info-container .nav-main li a .container-img {
+  margin-right: 0.5rem;
+  height: 50px;
+  width: 40px;
+}
+#comic-container .info-container .nav-main li a .container-img img {
   height: 100%;
   width: 100%;
 }
