--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -31,7 +31,12 @@ header {
             list-style: none;
             li {
                 margin: 0 1rem;
+                height: 100%;
                 flex-grow: 1;
+                border-bottom: 3px solid transparent;
+                a {
+                    text-decoration: none;
+                }
             }
         }
     }
@@ -43,4 +48,8 @@ header {
     img {
     width: 100%;
     }
+}
+
+.nav-list li.active {
+    border-color: #0282f9;
 }
